--- a/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
@@ -9,7 +9,7 @@
         <!--Editar Rota-->
         <scene sceneID="YFN-sv-Y7e">
             <objects>
-                <tableViewController id="uqP-3O-IOo" sceneMemberID="viewController">
+                <tableViewController id="uqP-3O-IOo" customClass="EditRoteTableViewController" customModule="Carona_Social" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1fd-hs-MCp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -46,7 +46,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="2mZ-99-TcF" kind="show" id="VDl-un-iSf"/>
+                                            <segue destination="2mZ-99-TcF" kind="show" id="50T-Og-eTY"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="114" id="Uft-Ud-JRn">
@@ -109,6 +109,9 @@
                                                 <constraint firstAttribute="trailing" secondItem="1bQ-eV-LgV" secondAttribute="trailing" constant="20" id="w7W-fs-MTQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="2mZ-99-TcF" kind="show" id="cvm-8M-kj2"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="114" id="yzL-GU-Kca">
                                         <rect key="frame" x="0.0" y="365" width="414" height="114"/>
@@ -149,10 +152,22 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Editar Rota" id="pbw-3u-Pi9">
-                        <barButtonItem key="rightBarButtonItem" title="Confirmar" id="msp-u8-6mV"/>
+                        <barButtonItem key="rightBarButtonItem" title="Confirmar" id="msp-u8-6mV">
+                            <connections>
+                                <action selector="confirmButton:" destination="uqP-3O-IOo" id="37v-eu-qbm"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="arrivalTime" destination="aA7-PE-x3b" id="cNW-bg-BHj"/>
+                        <outlet property="departureTime" destination="uxt-Z0-EtY" id="fMi-So-G1p"/>
+                        <outlet property="destiny" destination="0xp-Sx-fVx" id="dXA-nb-3y8"/>
+                        <outlet property="start" destination="TPa-bd-KbH" id="Avj-Ms-Ryt"/>
+                        <segue destination="InS-JY-Ydt" kind="unwind" identifier="backToMatch" unwindAction="backToMatch:" id="rjv-tk-0dw"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDD-Fy-JRh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="InS-JY-Ydt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2815.9420289855075" y="-494.19642857142856"/>
         </scene>
@@ -166,14 +181,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AdressTableViewCell" id="feu-oG-vS9" customClass="AddressTableViewCell" customModule="Carona_Social" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="feu-oG-vS9" id="9Pw-pk-ojR">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mr1-Hk-h1r">
-                                            <rect key="frame" x="20" y="11" width="354" height="21.5"/>
+                                            <rect key="frame" x="20" y="11" width="354" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -199,15 +214,18 @@
                     <navigationItem key="navigationItem" title="Endereço" id="1aQ-Bi-IG3">
                         <barButtonItem key="rightBarButtonItem" title="Adicionar" id="TCo-Tk-YYs">
                             <connections>
-                                <segue destination="XYx-rA-TjS" kind="show" identifier="novoPostoSegue" id="JW0-9x-FU3"/>
+                                <action selector="confirmButton:" destination="2mZ-99-TcF" id="Gdj-Kn-Bcm"/>
+                                <segue destination="XYx-rA-TjS" kind="show" identifier="newAdressSegue" id="JW0-9x-FU3"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="adressTableView" destination="TR7-7X-bCD" id="WdI-aF-lLh"/>
+                        <segue destination="Vqb-em-011" kind="unwind" identifier="backToEditRote" unwindAction="backToEditRote:" id="fGg-jW-lzO"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lFh-XX-MYB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="Vqb-em-011" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3584" y="-492"/>
         </scene>
@@ -343,4 +361,7 @@
             <point key="canvasLocation" x="4292.753623188406" y="-489.50892857142856"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="50T-Og-eTY"/>
+    </inferredMetricsTieBreakers>
 </document>
