edit select adress done

--- a/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
@@ -17,7 +17,7 @@
                         <sections>
                             <tableViewSection id="DGH-Wt-tuk">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="109" id="wR9-pP-jrD">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="startCell" rowHeight="109" id="wR9-pP-jrD">
                                         <rect key="frame" x="0.0" y="28" width="414" height="109"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wR9-pP-jrD" id="lu1-bn-Xqs">
@@ -30,7 +30,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TPa-bd-KbH">
+                                                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TPa-bd-KbH">
                                                     <rect key="frame" x="20" y="48" width="374" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -45,9 +45,6 @@
                                                 <constraint firstItem="CwP-Hi-zgK" firstAttribute="leading" secondItem="lu1-bn-Xqs" secondAttribute="leadingMargin" id="uRf-Rf-Gdk"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="2mZ-99-TcF" kind="show" id="50T-Og-eTY"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="114" id="Uft-Ud-JRn">
                                         <rect key="frame" x="0.0" y="137" width="414" height="114"/>
@@ -79,7 +76,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="114" id="Rv6-Z3-j3h">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="destinyCell" rowHeight="114" id="Rv6-Z3-j3h">
                                         <rect key="frame" x="0.0" y="251" width="414" height="114"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rv6-Z3-j3h" id="a3m-95-P6a">
@@ -92,7 +89,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xp-Sx-fVx">
+                                                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xp-Sx-fVx">
                                                     <rect key="frame" x="20" y="53" width="374" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -109,9 +106,6 @@
                                                 <constraint firstAttribute="trailing" secondItem="1bQ-eV-LgV" secondAttribute="trailing" constant="20" id="w7W-fs-MTQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="2mZ-99-TcF" kind="show" id="cvm-8M-kj2"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="114" id="yzL-GU-Kca">
                                         <rect key="frame" x="0.0" y="365" width="414" height="114"/>
@@ -164,6 +158,7 @@
                         <outlet property="destiny" destination="0xp-Sx-fVx" id="dXA-nb-3y8"/>
                         <outlet property="start" destination="TPa-bd-KbH" id="Avj-Ms-Ryt"/>
                         <segue destination="InS-JY-Ydt" kind="unwind" identifier="backToMatch" unwindAction="backToMatch:" id="rjv-tk-0dw"/>
+                        <segue destination="2mZ-99-TcF" kind="show" identifier="selectDestiny" id="2aU-bQ-hZY"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDD-Fy-JRh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -181,14 +176,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AdressTableViewCell" id="feu-oG-vS9" customClass="AddressTableViewCell" customModule="Carona_Social" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="feu-oG-vS9" id="9Pw-pk-ojR">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mr1-Hk-h1r">
-                                            <rect key="frame" x="20" y="11" width="354" height="21"/>
+                                            <rect key="frame" x="20" y="11" width="354" height="21.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -361,7 +356,4 @@
             <point key="canvasLocation" x="4292.753623188406" y="-489.50892857142856"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="50T-Og-eTY"/>
-    </inferredMetricsTieBreakers>
 </document>
